--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,9 @@ dependencies:
   pre:
     - chmod +x gradlew
     - wget "https://services.gradle.org/distributions/gradle-2.9-bin.zip"; unzip gradle-2.9-bin.zip
-    - sh accept_android_licenses.sh
+    - echo y | android update sdk --no-ui --all --filter tool,extra-android-m2repository,extra-android-support,extra-google-google_play_services,extra-google-m2repository,android-27
+    - echo y | android update sdk --no-ui --all --filter build-tools-27.0.1
+
         
 
 test:
